<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kasir Ku</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_activation">ActivationActivity</string>
    <string name="activation_message">Please activate your device</string>
    <string name="activation_enter_sn">enter serial number to activate your device</string>
    <string name="activation_enter_sn_hint">enter serial number</string>
    <string name="submit">SUBMIT</string>
    <string name="activation_failed">activation failed</string>
    <string name="activation_succeed">activation succeed</string>
    <string name="login">LOGIN</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="error_field_empty">field can not be empty</string>
    <string name="error_user_or_password">invalid username or password</string>
    <string name="quick_order">QUICK\nORDER</string>
    <string name="report">REPORT</string>
    <string name="master_data">MASTER\nDATA</string>
    <string name="setting">SETTING</string>
    <string name="logout">LOGOUT</string>
    <string name="title_master_list">Items</string>
    <string name="title_master_detail">Master Detail</string>
    <string name="name">name</string>
    <string name="code">code</string>
    <string name="value">value</string>
    <string name="add">add</string>
    <string name="save">save</string>
    <string name="amount">amount</string>
    <string name="edit">edit</string>
    <string name="save_succeed">Data successfully saved</string>
    <string name="delete_message">Are you sure want to delete</string>
    <string name="cancel">cancel</string>
    <string name="ok">ok</string>
    <string name="name_exist">name already exist</string>
    <string name="username_exist">username already exist</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="level">level</string>
    <string name="password_four_char">password at least 4 characters</string>
    <string name="confirmation">confirmation</string>
    <string name="logout_confirmation">are you sure want to logout?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="logout_success">logout successfully</string>
    <string name="status">status</string>
    <string name="description">description</string>
    <string name="price">price</string>
    <string name="discount">discount</string>
    <string name="category">category</string>
    <string name="image">image</string>
    <string name="complete_action_using">Complete action using</string>
    <string name="from_camera">from camera</string>
    <string name="from_gallery">from gallery</string>
    <string name="select_file">select file</string>
    <string name="invalid_price_format">invalid price format</string>
    <string name="invalid_discount_format">invalid discount format</string>
    <string name="price_less_zero">price can not lower than zero</string>
    <string name="discount_less_zero">discount can not lower than zero</string>
    <string name="data_being_used">data being used</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="title_activity_quick_order">QuickOrderActivity</string>
    <string name="your_order">Your Order</string>
    <string name="order">ORDER</string>
    <string name="cancel_order">CANCEL</string>
    <string name="save_order">SAVE</string>
    <string name="find_food">Find foods that you want </string>
    <string name="total">TOTAL</string>
    <string name="pay">PAYMENT</string>
    <string name="enter_payment">enter payment</string>
    <string name="change">CHANGE</string>
    <string name="button_scan">Scan for devices</string>
    <string name="scanning">scanning for devices...</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_found">No devices found</string>
    <string name="select_one">please select at least one product</string>
    <string name="sure">are you sure ?</string>
    <string name="enter_description">enter additional description</string>
    <string name="transaction_succeed">transaction succeed</string>
    <string name="empty_order">order is empty</string>
    <string name="title_setting_list">Settings</string>
    <string name="title_setting_detail">Setting Detail</string>

</resources>
